# RaftAlgo

./: .gitignore  README.md
RaftAlgoCode/: CMakeLists.txt
RaftAlgoCode/src/: choose_forwarder.c  lib.c  lib.h  message_handling.c  message_handling.h  raftalgo.c  registers.h  regs.h  variables.h
